about page header photo
LMS_volume7

--- a/E-Learners Education/TimeSchedule.html
+++ b/E-Learners Education/TimeSchedule.html
@@ -59,7 +59,8 @@
 <!-- Preloader -->
 <div id="preloader">
     <div id="status">&nbsp;</div>
-</div>    
+</div>  
+  
     <div class="header_top">
         <div class="container">
             <div class="row">
@@ -83,6 +84,7 @@
             </div>
         </div>
     </div>
+    
 
     <div class="edu_nav">
         <div class="container">
@@ -116,6 +118,23 @@
             </nav><!-- END NAVBAR -->
         </div> 
     </div>
+
+    <div class="intro_wrapper">
+        <div class="container">  
+            <div class="row">        
+                 <div class="col-sm-12 col-md-8 col-lg-8">
+                    <div class="intro_text">
+                        <h1>Why Not To Make Your <br>Time-Table Now !!!</h1>
+ <!--                       <div class="pages_links">
+                            <a href="#" title="">Home</a>
+                            <a href="#" title="" class="active">Course Page</a>  -->
+                        </div>
+                    </div>
+                </div>              
+
+            </div>
+        </div>
+    </header> 
 
 
 <section class="login_signup_option">
@@ -208,6 +227,8 @@
         </div>
     </div>
 </section>  <!-- End Login Signup Option -->
+
+ 
 
 <!-- <iframe src="TimeSchedule/index.html" width="100%" height="500px"> -->
 <!-- </iframe> -->
