--- a/E-Learners Education/index.html
+++ b/E-Learners Education/index.html
@@ -854,6 +854,7 @@
                         <a href="#" title=""><img src="images/blog/blog_1.jpg" alt="" class="img-fluid"></a>
                     </div>
                     <div class="blog_title">
+                        <br><br>
                         <span>Python Development in current Industries</span>  
                         <h3><a href="#" title="">How to Become Master In <br>Python designing.</a></h3> 
                         <div class="post_bloger">
@@ -868,6 +869,7 @@
                         <a href="#" title=""><img src="images/blog/blog_2.jpg" alt="" class="img-fluid"></a>
                     </div>
                     <div class="blog_title">
+                        <br>
                         <span>LeaderShip Development</span>  
                         <h3><a href="#" title="">Students work together to <br>solve a problem.</a></h3> 
                         <div class="post_bloger">
@@ -882,7 +884,8 @@
                         <a href="#" title=""><img src="images/blog/blog_3.jpg" alt="" class="img-fluid"></a>
                     </div>
                     <div class="blog_title">
-                        <span>Music : As a career</span>  
+                        <br><br><br><br>
+                        <span>Music : As a career with the fundamentals of the Rhythms</span>  
                         <h3><a href="#" title="">How to Become Master In <br>Music within a month.</a></h3> 
                         <div class="post_bloger">
                             <span>5/04/2021 - By </span> <span class="bloger_name"> Sakshi Narang</span>
