April4th_regular update
April 4th, 2021

--- a/E-Learners Education/course.html
+++ b/E-Learners Education/course.html
@@ -226,7 +226,7 @@
                     <div class="courses_banner_wrapper">
                         <div class="courses_banner"><a href="#"><img src="images/courses/courses_1.jpg" alt="" class="img-fluid"></a></div>
                         <div class="purchase_price">
-                            <a href="#" class="read_more-btn">1050 Rs.</a>
+                            <a href="#" class="read_more-btn">Free</a>
                         </div>
                     </div>
                     <div class="courses_info_wrapper">
@@ -239,7 +239,7 @@
                                 <li><i class="fas fa-user"></i>180 Days</li>
                                 <li><i class="fas fa-calendar-alt"></i>30 Students</li>
                             </ul>
-                            <a href="#" class="cart_btn">Add to Cart</a>
+                            <a href="#" class="cart_btn">Enroll</a>
                         </div>
                     </div>
                 </div><!-- Ends: .single courses -->
@@ -265,7 +265,7 @@
                                 <li><i class="fa fa-user"></i> 180 Days</li>
                                 <li><i class="fa fa-comment"></i>50 Students</li>
                             </ul>
-                            <a href="#" class="cart_btn">Add to Cart</a>
+                            <a href="#" class="cart_btn">Enroll</a>
                         </div>
                     </div>
                 </div><!-- Ends: .single courses -->
@@ -276,7 +276,7 @@
                     <div class="courses_banner_wrapper">
                         <div class="courses_banner"><a href="#"><img src="images/courses/courses_3.jpg" alt="" class="img-fluid"></a></div>
                         <div class="purchase_price">
-                            <a href="#" class="read_more-btn">1200 Rs.</a>
+                            <a href="#" class="read_more-btn">Free</a>
                         </div>
                     </div>
                     <div class="courses_info_wrapper">
@@ -289,7 +289,7 @@
                                 <li><i class="fa fa-user"></i> 140 Days</li>
                                 <li><i class="fa fa-comment"></i>60 Students</li>
                             </ul>
-                            <a href="#" class="cart_btn">Add to Cart</a>
+                            <a href="#" class="cart_btn">Enroll</a>
                         </div>
                     </div>
                 </div><!-- Ends: .single courses -->
@@ -300,7 +300,7 @@
                     <div class="courses_banner_wrapper">
                         <div class="courses_banner"><a href="#"><img src="images/courses/courses_4.jpg" alt="" class="img-fluid"></a></div>
                         <div class="purchase_price">
-                            <a href="#" class="read_more-btn">2500 Rs.</a>
+                            <a href="#" class="read_more-btn">Free</a>
                         </div>
                     </div>
                     <div class="courses_info_wrapper">
@@ -313,7 +313,7 @@
                                 <li><i class="fa fa-user"></i> 130 Days</li>
                                 <li><i class="fa fa-comment"></i>45 Students</li>
                             </ul>
-                            <a href="#" class="cart_btn">Add to Cart</a>
+                            <a href="#" class="cart_btn">Enroll</a>
                         </div>
                     </div>
                 </div><!-- Ends: .single courses -->
@@ -324,7 +324,7 @@
                     <div class="courses_banner_wrapper">
                         <div class="courses_banner"><a href="#"><img src="images/courses/courses_5.jpg" alt="" class="img-fluid"></a></div>
                         <div class="purchase_price">
-                            <a href="#" class="read_more-btn">1800 Rs.</a>
+                            <a href="#" class="read_more-btn">Free</a>
                         </div>
                     </div>
                     <div class="courses_info_wrapper">
@@ -337,7 +337,7 @@
                                 <li><i class="fa fa-user"></i> 190 Days</li>
                                 <li><i class="fa fa-comment"></i>40 Students</li>
                             </ul>
-                            <a href="#" class="cart_btn">Add to Cart</a>
+                            <a href="#" class="cart_btn">Enroll</a>
                         </div>
                     </div>
                 </div><!-- Ends: .single courses -->
@@ -348,7 +348,7 @@
                     <div class="courses_banner_wrapper">
                         <div class="courses_banner"><a href="#"><img src="images/courses/courses_6.jpg" alt="" class="img-fluid"></a></div>
                         <div class="purchase_price">
-                            <a href="#" class="read_more-btn">1500 Rs.</a>
+                            <a href="#" class="read_more-btn">Free</a>
                         </div>
                     </div>
                     <div class="courses_info_wrapper">
@@ -361,7 +361,7 @@
                                 <li><i class="fa fa-user"></i> 150 Days</li>
                                 <li><i class="fa fa-comment"></i>30 Students</li>
                             </ul>
-                            <a href="#" class="cart_btn">Add to Cart</a>
+                            <a href="#" class="cart_btn">Enroll</a>
                         </div>
                     </div>
                 </div><!-- Ends: .single courses -->
@@ -371,7 +371,7 @@
                     <div class="courses_banner_wrapper">
                         <div class="courses_banner"><a href="#"><img src="images/courses/courses_3.jpg" alt="" class="img-fluid"></a></div>
                         <div class="purchase_price">
-                            <a href="#" class="read_more-btn">2800 Rs.</a>
+                            <a href="#" class="read_more-btn">Free</a>
                         </div>
                     </div>
                     <div class="courses_info_wrapper">
@@ -384,7 +384,7 @@
                                 <li><i class="fa fa-user"></i> 130 Days</li>
                                 <li><i class="fa fa-comment"></i>45 Students</li>
                             </ul>
-                            <a href="#" class="cart_btn">Add to Cart</a>
+                            <a href="#" class="cart_btn">Enroll</a>
                         </div>
                     </div>
                 </div><!-- Ends: .single courses -->
@@ -395,7 +395,7 @@
                     <div class="courses_banner_wrapper">
                         <div class="courses_banner"><a href="#"><img src="images/courses/courses_1.jpg" alt="" class="img-fluid"></a></div>
                         <div class="purchase_price">
-                            <a href="#" class="read_more-btn">2200 Rs.</a>
+                            <a href="#" class="read_more-btn">Free</a>
                         </div>
                     </div>
                     <div class="courses_info_wrapper">
@@ -408,7 +408,7 @@
                                 <li><i class="fa fa-user"></i> 190 Days</li>
                                 <li><i class="fa fa-comment"></i>40 Students</li>
                             </ul>
-                            <a href="#" class="cart_btn">Add to Cart</a>
+                            <a href="#" class="cart_btn">Enroll</a>
                         </div>
                     </div>
                 </div><!-- Ends: .single courses -->
@@ -419,7 +419,7 @@
                     <div class="courses_banner_wrapper">
                         <div class="courses_banner"><a href="#"><img src="images/courses/courses_2.jpg" alt="" class="img-fluid"></a></div>
                         <div class="purchase_price">
-                            <a href="#" class="read_more-btn">1500 Rs.</a>
+                            <a href="#" class="read_more-btn">Free</a>
                         </div>
                     </div>
                     <div class="courses_info_wrapper">
@@ -432,15 +432,16 @@
                                 <li><i class="fa fa-user"></i> 150 Days</li>
                                 <li><i class="fa fa-comment"></i>30 Students</li>
                             </ul>
-                            <a href="#" class="cart_btn">Add to Cart</a>
+                            <a href="#" class="cart_btn">Enroll</a>
                         </div>
                     </div>
                 </div><!-- Ends: .single courses -->
             </div><!-- Ends: . -->  
             <div class="pagination_blog">
-                <ul>
-                    <li><a href="#">1</a></li>
-                    <li class="current"><a href="#">2</a></li>
+                <ul>    
+                    <li class="current"><a href="#">1</a></li>
+                <!-- reversed page 1 and 2's line -->
+                    <li><a href="#">2</a></li>
                     <li><a href="#" class=""><i class='flaticon-right-arrow'></i></a></li>
                 </ul>
             </div>                                       
