--- a/E-Learners Education/index.html
+++ b/E-Learners Education/index.html
@@ -499,7 +499,7 @@
                     <div class="courses_banner_wrapper">
                         <div class="courses_banner"><a href="#"><img src="images/courses/courses_1.jpg" alt="" class="img-fluid"></a></div>
                         <div class="purchase_price">
-                            <a href="#" class="read_more-btn">1050 Rs.</a>
+                            <a href="#" class="read_more-btn">Free</a>
                         </div>
                     </div>
                     <div class="courses_info_wrapper">
@@ -512,7 +512,7 @@
                                 <li><i class="fas fa-user"></i>180 Days</li>
                                 <li><i class="fas fa-calendar-alt"></i>30 Students</li>
                             </ul>
-                            <a href="#" class="cart_btn">Add to Cart</a>
+                            <a href="#" class="cart_btn">Enroll</a>
                         </div>
                     </div>
                 </div><!-- Ends: .single courses -->
@@ -538,7 +538,7 @@
                                 <li><i class="fa fa-user"></i> 180 Days</li>
                                 <li><i class="fa fa-comment"></i>50 Students</li>
                             </ul>
-                            <a href="#" class="cart_btn">Add to Cart</a>
+                            <a href="#" class="cart_btn">Enroll</a>
                         </div>
                     </div>
                 </div><!-- Ends: .single courses -->
@@ -549,7 +549,7 @@
                     <div class="courses_banner_wrapper">
                         <div class="courses_banner"><a href="#"><img src="images/courses/courses_3.jpg" alt="" class="img-fluid"></a></div>
                         <div class="purchase_price">
-                            <a href="#" class="read_more-btn">1200 Rs.</a>
+                            <a href="#" class="read_more-btn">Free</a>
                         </div>
                     </div>
                     <div class="courses_info_wrapper">
@@ -562,7 +562,7 @@
                                 <li><i class="fa fa-user"></i> 140 Days</li>
                                 <li><i class="fa fa-comment"></i>60 Students</li>
                             </ul>
-                            <a href="#" class="cart_btn">Add to Cart</a>
+                            <a href="#" class="cart_btn">Enroll</a>
                         </div>
                     </div>
                 </div><!-- Ends: .single courses -->
@@ -573,7 +573,7 @@
                     <div class="courses_banner_wrapper">
                         <div class="courses_banner"><a href="#"><img src="images/courses/courses_4.jpg" alt="" class="img-fluid"></a></div>
                         <div class="purchase_price">
-                            <a href="#" class="read_more-btn">2500 Rs.</a>
+                            <a href="#" class="read_more-btn">Free</a>
                         </div>
                     </div>
                     <div class="courses_info_wrapper">
@@ -586,7 +586,7 @@
                                 <li><i class="fa fa-user"></i> 130 Days</li>
                                 <li><i class="fa fa-comment"></i>45 Students</li>
                             </ul>
-                            <a href="#" class="cart_btn">Add to Cart</a>
+                            <a href="#" class="cart_btn">Enroll</a>
                         </div>
                     </div>
                 </div><!-- Ends: .single courses -->
@@ -597,7 +597,7 @@
                     <div class="courses_banner_wrapper">
                         <div class="courses_banner"><a href="#"><img src="images/courses/courses_5.jpg" alt="" class="img-fluid"></a></div>
                         <div class="purchase_price">
-                            <a href="#" class="read_more-btn">1800 Rs.</a>
+                            <a href="#" class="read_more-btn">Free</a>
                         </div>
                     </div>
                     <div class="courses_info_wrapper">
@@ -610,7 +610,7 @@
                                 <li><i class="fa fa-user"></i> 190 Days</li>
                                 <li><i class="fa fa-comment"></i>40 Students</li>
                             </ul>
-                            <a href="#" class="cart_btn">Add to Cart</a>
+                            <a href="#" class="cart_btn">Enroll</a>
                         </div>
                     </div>
                 </div><!-- Ends: .single courses -->
@@ -622,7 +622,7 @@
                     <div class="courses_banner_wrapper">
                         <div class="courses_banner"><a href="#"><img src="images/courses/courses_2.jpg" alt="" class="img-fluid"></a></div>
                         <div class="purchase_price">
-                            <a href="#" class="read_more-btn">1500 Rs.</a>
+                            <a href="#" class="read_more-btn">Free</a>
                         </div>
                     </div>
                     <div class="courses_info_wrapper">
@@ -635,7 +635,7 @@
                                 <li><i class="fa fa-user"></i> 150 Days</li>
                                 <li><i class="fa fa-comment"></i>30 Students</li>
                             </ul>
-                            <a href="#" class="cart_btn">Add to Cart</a>
+                            <a href="#" class="cart_btn">Enroll</a>
                         </div>
                     </div>
                 </div><!-- Ends: .single courses -->
@@ -684,7 +684,7 @@
                 </div>
                 <div class="col-12 col-sm-6 col-md-5 col-lg-5">
                     <div class="about_story_title">
-                        <h2>The Srory Of Our <br>E-Learners.</h2>
+                        <h2>The Story Of Our <br>E-Learners.</h2>
                         <p>E-Learners provide Industry related courses as well as Personal skill development related courses at very low to no prices at all.</p>
                      </div>
                 </div>
