--- a/E-Learners Education/TimeSchedule.html
+++ b/E-Learners Education/TimeSchedule.html
@@ -258,7 +258,7 @@
         <td><input type="Hour" name="Hour" required></td>
        </tr> 
      <tr>
-      <td><input type="submit" value="Submit"></td>
+      <td><input type="submit" style="width: 100%; height: 100%; color:rgb(245, 122, 7);" value="Submit"></td>
      </tr>
     </table>
    </form>
