--- a/E-Learners Education/course-details.html
+++ b/E-Learners Education/course-details.html
@@ -79,8 +79,9 @@
                         <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
                         <li class="nav-item"><a href="course.html" class="nav-link active">Courses</a>
                             <ul class="navbar-nav nav mx-auto">
-                                <li class="nav-item"><a href="course.html" class="nav-link">Courses</a></li>
-                                <li class="nav-item"><a href="course-details.html" class="nav-link">Trending Course This Week</a></li>                            </ul> 
+                                <li class="nav-item"><a href="course.html" class="nav-link ">Courses</a></li>
+                                <li class="nav-item"><a href="enrolled_courses.html" class="nav-link">Enrolled Courses</a></li>
+                                <li class="nav-item"><a href="course-details.html" class="nav-link active">Trending Course This Week</a></li>                            </ul> 
                         </li>
                         <li class="nav-item"><a href="TimeSchedule.html" class="nav-link">Time Schedule</a></li>
                         <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
