--- a/E-Learners Education/course.html
+++ b/E-Learners Education/course.html
@@ -81,6 +81,7 @@
                         <li class="nav-item"><a href="course.html" class="nav-link active">Courses</a>
                             <ul class="navbar-nav nav mx-auto">
                                 <li class="nav-item"><a href="course.html" class="nav-link active">Courses</a></li>
+                                <li class="nav-item"><a href="enrolled_courses.html" class="nav-link">Enrolled Courses</a></li>
                                 <li class="nav-item"><a href="course-details.html" class="nav-link">Trending Course This Week</a></li>                            </ul> 
                         </li>
                         <li class="nav-item"><a href="TimeSchedule.html" class="nav-link">Time Schedule</a></li>     
