--- a/E-Learners Education/enrolled_courses.html
+++ b/E-Learners Education/enrolled_courses.html
@@ -33,34 +33,13 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
     <link rel="stylesheet" href="css/demo.css">
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
-    <style>
-        input{
-    margin-bottom: 30px !important;
-    overflow: visible !important;
-    margin-left: 74px !important;
-        }
-
-        td{
-
-            padding-left: 30px !important;
-        }
-    </style>
-
 </head>
 <body>
-<header class="header_inner courses_page">
+<header class="header_inner about_page">
 <!-- Preloader -->
 <div id="preloader">
     <div id="status">&nbsp;</div>
-</div>  
-  
+</div>    
     <div class="header_top">
         <div class="container">
             <div class="row">
@@ -84,7 +63,6 @@
             </div>
         </div>
     </div>
-    
 
     <div class="edu_nav">
         <div class="container">
@@ -93,14 +71,14 @@
                 <div class="collapse navbar-collapse main-menu" id="navbarSupportedContent">
                     <ul class="navbar-nav nav lavalamp ml-auto menu">
                         <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-                        <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
-                        <li class="nav-item"><a href="course.html" class="nav-link ">Courses</a>
+                        <li class="nav-item"><a href="about.html" class="nav-link ">About</a></li>
+                        <li class="nav-item"><a href="course.html" class="nav-link">Courses</a>
                             <ul class="navbar-nav nav mx-auto">
-                                <li class="nav-item"><a href="course.html" class="nav-link ">Courses</a></li>
-                                <li class="nav-item"><a href="enrolled_courses.html" class="nav-link">Enrolled Courses</a></li>
+                                <li class="nav-item"><a href="course.html" class="nav-link">Courses</a></li>
+                                <li class="nav-item"><a href="enrolled_courses.html" class="nav-link active">Enrolled Courses</a></li> 
                                 <li class="nav-item"><a href="course-details.html" class="nav-link">Trending Course This Week</a></li>                            </ul> 
                         </li>
-                        <li class="nav-item"><a href="TimeSchedule.html" class="nav-link active">Time Schedule</a></li>     
+                        <li class="nav-item"><a href="TimeSchedule.html" class="nav-link">Time Schedule</a></li>
                         <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
                     </ul>
                 </div>
@@ -125,17 +103,15 @@
             <div class="row">        
                  <div class="col-sm-12 col-md-8 col-lg-8">
                     <div class="intro_text">
-                        <h1>Why Not To Make Your <br>Time-Table Now !!!</h1>
- <!--                       <div class="pages_links">
-                            <a href="#" title="">Home</a>
-                            <a href="#" title="" class="active">Course Page</a>  -->
-                        </div>
+                        <h1>There're always new skills to learn !</h1>
                     </div>
                 </div>              
 
             </div>
-        </div>
-    </header> 
+        </div> 
+    </div> 
+</header> <!-- End nav -->
+
 
 
 <section class="login_signup_option">
@@ -229,43 +205,18 @@
     </div>
 </section>  <!-- End Login Signup Option -->
 
- 
 
-<!-- <iframe src="TimeSchedule/index.html" width="100%" height="500px"> -->
-<!-- </iframe> -->
-<form action="insert.php" method="POST">
-    <table> 
-     <tr>
-      <td>Day 1 on which you have time to Learn</td>
-      <td><input type="text" name="day1" required></td>
-     </tr><br><br>
-     <tr>
-      <td>Day 2 on which you have time to Learn</td>
-      <td><input type="text" name="day2" required></td>
-     </tr>
-     <tr>
-      <td>TimeMap :</td>
-      <td>
-       <input type="radio" name="timemap" value="am" required>AM
-       <input type="radio" name="timemap" value="pm" required>PM
-      </td>
-     </tr>
-     <tr>
-      <td>Total Hour Durtion :</td>
-      <td><input type="totalhour" name="totalhour" required></td>
-     </tr> 
-     <tr>
-        <td>Starting Hour Time :</td>
-        <td><input type="Hour" name="Hour" required></td>
-       </tr> 
-     <tr>
-      <td><input type="submit" style="width: 100%; height: 100%; color:rgb(245, 122, 7);" value="Submit"></td>
-     </tr>
-    </table>
-   </form>
 
-   
-<br><br>
+<br><br><br><br><br><br><br><br><br>
+<br><br><br><br><br><br><br><br><br>
+<br><br><br><br><br><br><br><br><br>
+<br><br><br><br><br><br><br><br><br>
+
+
+
+
+
+
 <!-- Footer -->  
 <footer class="footer_2">
     <div class="container">
@@ -317,13 +268,12 @@
     <script src="js/jquery.magnific-popup.min.js"></script>     
     <script src="js/owl.carousel.min.js"></script>   
     <script src="js/slick.min.js"></script>   
-    <script src="js/jquery.meanmenu.min.js"></script>      
+    <script src="js/jquery.meanmenu.min.js"></script>    
     <script src="js/wow.min.js"></script> 
     <!-- Counter Script -->
     <script src="js/waypoints.min.js"></script>
     <script src="js/jquery.counterup.min.js"></script>
     <script src="js/custom.js"></script>  
-    
 
 </body>
 
