--- a/E-Learners Education/index.html
+++ b/E-Learners Education/index.html
@@ -40,12 +40,7 @@
     <link rel="stylesheet" href="css/style.css">    
     <link rel="stylesheet" href="css/responsive.css">
     <link rel="stylesheet" href="css/demo.css">
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+
 </head>
 <body>
 <header class="header_four">
@@ -88,7 +83,9 @@
                         <li class="nav-item"><a href="course.html" class="nav-link">Courses</a>
                             <ul class="navbar-nav nav mx-auto">
                                 <li class="nav-item"><a href="course.html" class="nav-link">Courses</a></li>
-                                <li class="nav-item"><a href="course-details.html" class="nav-link">Trending Course This Week</a></li>                            </ul> 
+                                <li class="nav-item"><a href="enrolled_courses.html" class="nav-link">Enrolled Courses</a></li>
+                                <li class="nav-item"><a href="course-details.html" class="nav-link">Trending Course This Week</a></li>                                                      
+                             </ul> 
                         </li>
                         <li class="nav-item"><a href="event.html" class="nav-link">Live Events</a></li>    
                         <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
