09_May_2021_Final_Changes
integrating chatbot

--- a/E-Learners Education/about.html
+++ b/E-Learners Education/about.html
@@ -153,6 +153,7 @@
                                             <a href="forgot-password.html" title="" class="forget_pass">Forget Password ?</a>
                                             <button type="submit" class="btn btn-default login_btn">Login</button>
                                         </div> 
+                                    <!--    
                                         <div class="col-12 col-lg-12 col-md-12 col-lg-12">
                                             <div class="social_login">
                                                 <div class="social_items">
@@ -161,8 +162,9 @@
                                                     <button class="google_login twitter">Login Twitter</button>
                                                     <button class="google_login linkdin">Login Linkdin</button>
                                                 </div>
-                                            </div>
+                                            </div> 
                                         </div>
+                                    -->
                                     </div>
                                 </form>
                             </div>
@@ -453,7 +455,7 @@
                 <div class="faq_wrapper">
                     <div class="single_faq">
                         <h3><span>1</span>What do E-Learners courses include?</h3>
-                        <p>Each E-Learners course is created, owned and managed by the instructor(s). The foundation of each Udemy course are its lectures, which can include videos, slides, and text. In addition, instructors can add resources and various types of practice activities, as a way to enhance the learning experience of students. </p>
+                        <p>Each E-Learners course is created, owned and managed by the instructor(s). The foundation of each E-Learners course are its lectures, which can include videos, slides, and text. In addition, instructors can add resources and various types of practice activities, as a way to enhance the learning experience of students. </p>
                     </div>                    
                     <div class="single_faq">
                         <h3><span>2</span>How do I take a E-Learners course?</h3>
