--- a/E-Learners Education/TimeSchedule.html
+++ b/E-Learners Education/TimeSchedule.html
@@ -33,7 +33,12 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
     <link rel="stylesheet" href="css/demo.css">
-
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
 
     <style>
         input{
@@ -172,6 +177,7 @@
                                             <a href="forgot-password.html" title="" class="forget_pass">Forget Password ?</a>
                                             <button type="submit" class="btn btn-default login_btn">Login</button>
                                         </div> 
+                                        <!--
                                         <div class="col-12 col-lg-12 col-md-12 col-lg-12">
                                             <div class="social_login">
                                                 <div class="social_items">
@@ -182,6 +188,7 @@
                                                 </div>
                                             </div>
                                         </div>
+                                    -->    
                                     </div>
                                 </form>
                             </div>
@@ -253,13 +260,23 @@
         <td>Starting Hour Time :</td>
         <td><input type="Hour" name="Hour" required></td>
        </tr> 
+       <br>
      <tr>
       <td><input type="submit" style="width: 100%; height: 100%; color:rgb(245, 122, 7);" value="Submit"></td>
      </tr>
     </table>
    </form>
+   <br><br>
+   <iframe width="1510" height="555"
+   src="https://www.youtube.com/embed/Z6kAEQJhSoU?autoplay=0&mute=1">
+   </iframe>
+   <!--========================================================================================-->
 
-   
+
+
+
+
+  <!--=============================================================================================--> 
 <br><br>
 <!-- Footer -->  
 <footer class="footer_2">
