--- a/E-Learners Education/contact.html
+++ b/E-Learners Education/contact.html
@@ -153,7 +153,8 @@
                                         <div class="col-12 col-lg-12 col-md-12 col-lg-12 d-flex justify-content-between login_option">
                                             <a href="forgot-password.html" title="" class="forget_pass">Forget Password ?</a>
                                             <button type="submit" class="btn btn-default login_btn">Login</button>
-                                        </div> 
+                                        </div>
+                                    <!--     
                                         <div class="col-12 col-lg-12 col-md-12 col-lg-12">
                                             <div class="social_login">
                                                 <div class="social_items">
@@ -164,6 +165,7 @@
                                                 </div>
                                             </div>
                                         </div>
+                                    -->
                                     </div>
                                 </form>
                             </div>
@@ -233,7 +235,7 @@
                                 </ul>
                             </li>
                             <li>
-                                <h4 class="info_title">Our E-mails :</h4>
+                                <h4 class="info_title">Our Support E-mail :</h4>
                                 <ul class="list-unstyled">
                                     <li>support@elearners.com</li>                                    
                                 </ul>
@@ -282,8 +284,7 @@
     <div class="container-fluid">  
         <div class="row">                  
             <div class="col-12 col-sm-12 col-md-12 col-lg-12 mr-auto p-0">
-                <h2 class="disabled">Google Map</h2>
-                <div class="google_map">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4657.851951119727!2d77.60481507189304!3d12.933879875011257!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae15b277a93807%3A0x88518f37b39dabd0!2sCHRIST%20(Deemed%20to%20be%20University)!5e0!3m2!1sen!2sin!4v1620546116280!5m2!1sen!2sin" width="1519" height="650" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                     <div class="gmap">
                         <div id="map"></div>
                     </div><!-- Ends: .gmap -->                    
