--- a/E-Learners Education/enrolled_courses.html
+++ b/E-Learners Education/enrolled_courses.html
@@ -72,7 +72,7 @@
                     <ul class="navbar-nav nav lavalamp ml-auto menu">
                         <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
                         <li class="nav-item"><a href="about.html" class="nav-link ">About</a></li>
-                        <li class="nav-item"><a href="course.html" class="nav-link">Courses</a>
+                        <li class="nav-item"><a href="course.html" class="nav-link active">Courses</a>
                             <ul class="navbar-nav nav mx-auto">
                                 <li class="nav-item"><a href="course.html" class="nav-link">Courses</a></li>
                                 <li class="nav-item"><a href="enrolled_courses.html" class="nav-link active">Enrolled Courses</a></li> 
@@ -153,6 +153,7 @@
                                             <a href="forgot-password.html" title="" class="forget_pass">Forget Password ?</a>
                                             <button type="submit" class="btn btn-default login_btn">Login</button>
                                         </div> 
+                                        <!--
                                         <div class="col-12 col-lg-12 col-md-12 col-lg-12">
                                             <div class="social_login">
                                                 <div class="social_items">
@@ -163,6 +164,7 @@
                                                 </div>
                                             </div>
                                         </div>
+                                    -->    
                                     </div>
                                 </form>
                             </div>
