--- a/E-Learners Education/forgot-password.html
+++ b/E-Learners Education/forgot-password.html
@@ -34,7 +34,12 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
     <link rel="stylesheet" href="css/demo.css">
-
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
 </head>
 <body>
 <header class="header_inner contact_page">
@@ -154,7 +159,7 @@
                                             <a href="forgot-password.html" title="" class="forget_pass">Forget Password ?</a>
                                             <button type="submit" class="btn btn-default login_btn">Login</button>
                                         </div> 
-                                        <div class="col-12 col-lg-12 col-md-12 col-lg-12">
+                                    <!--<div class="col-12 col-lg-12 col-md-12 col-lg-12">
                                             <div class="social_login">
                                                 <div class="social_items">
                                                     <button class="google_login google">Login Google</button>
@@ -164,6 +169,7 @@
                                                 </div>
                                             </div>
                                         </div>
+                                    -->
                                     </div>
                                 </form>
                             </div>
