--- a/E-Learners Education/index.html
+++ b/E-Learners Education/index.html
@@ -3,8 +3,8 @@
 
 
 <head>
-    <!-- <script>var chatbot_id=7125;!function(){var t,e,a=document,s="smatbot-chatbot";a.getElementById(s)||(t=a.createElement("script"),t.id=s,t.type="text/javascript",t.src="https://smatbot.s3.amazonaws.com/files/smatbot_plugin.js.gz",e=a.getElementsByTagName("script")[0],e.parentNode.insertBefore(t,e))}();</script><script src="https://cdnjs.cloudflare.com/ajax/libs/fingerprintjs2/1.5.1/fingerprint2.min.js"></script> -->
     <!-- Required meta tags -->
+    <script src="//code.tidio.co/xoakhj2nownmlzcnohxbremzdzhwhkbm.js" async></script>
     <meta charset="UTF-8">
     <meta name="description" content="">
     <meta name="keywords" content="HTML,CSS,XML,JavaScript">
@@ -78,7 +78,7 @@
                 <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="logo"></a>
                 <div class="collapse navbar-collapse main-menu" id="navbarSupportedContent">
                     <ul class="navbar-nav nav lavalamp ml-auto menu">
-                        <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
+                        <li class="nav-item"><a href="index.html" class="nav-link active">Home</a></li>
                         <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
                         <li class="nav-item"><a href="course.html" class="nav-link">Courses</a>
                             <ul class="navbar-nav nav mx-auto">
@@ -180,6 +180,7 @@
                     </div>
 
                     <!-- LAYER NR. 4 -->
+                    <!--
                     <div class="tp-caption rev-btn rev-btn left_btn" 
                         id="slide-2939-layer-8" 
                         data-x="['left','left','left','left']" data-hoffset="['0','500','420','280']" 
@@ -202,10 +203,11 @@
 
                         style="z-index: 14; white-space: nowrap; font-weight: 500; color: #ffffff;font-family:Rubik; text-transform:uppercase; background-color:#ff5a2c; border-color:rgba(0, 0, 0, 1.00); border-width:2px;  border-radius: 3px;">Get Started Now
                     </div>
+                -->
                     <!-- LAYER NR. 5 -->
                     <div class="tp-caption rev-btn rev-btn right-btn" 
                         id="slide-2939-layer-8" 
-                        data-x="['left','left','left','left']" data-hoffset="['250','-60','-130','-100']" 
+                        data-x="['left','left','left','left']" data-hoffset="['0','500','420','280']" 
                         data-y="['middle','middle','middle','middle']" data-voffset="['75','220','190','100']" 
                         data-fontsize="['14','14','10','8']"
                         data-lineheight="['34','34','30','20']"
@@ -222,7 +224,7 @@
                         data-paddingright="[40,40,30,25]"
                         data-paddingbottom="[12,12,8,8]"
                         data-paddingleft="[40,40,30,25]"
-                        style="z-index: 14; white-space: nowrap;  font-weight:500; color:#ffffff; font-family:Rubik; text-transform:uppercase; background-color:#092ace; letter-spacing:1px; border-radius: 3px;">View Courses
+                        style="z-index: 14; white-space: nowrap;  font-weight:500; color:#ffffff; font-family:Rubik; text-transform:uppercase; background-color:#092ace; letter-spacing:1px; border-radius: 3px;"><a href="https://www.christuniversity.in/" style="color: white" target="_blank">Visit to Your College Website</a>
                     </div>
                 </li>
 
@@ -288,9 +290,11 @@
                         style="z-index: 5; font-family:'Roboto', sans-serif; font-weight: 700; white-space: nowrap;text-transform:left;">Knowledge With Us.
                     </div>
 
-                        <!-- LAYER NR. 4 -->
+                    <!-- LAYER NR. 4 -->
+                    <!--
                     <div class="tp-caption rev-btn rev-btn left_btn" 
-                        id="slide-2939-layer13" 
+                        id="slide-2939-layer-8" 
+                        data-x="['left','left','left','left']" data-hoffset="['0','500','420','280']" 
                         data-y="['middle','middle','middle','middle']" data-voffset="['75','220','190','100']" 
                         data-fontsize="['14','14','10','8']"
                         data-lineheight="['34','34','30','20']"
@@ -310,10 +314,11 @@
 
                         style="z-index: 14; white-space: nowrap; font-weight: 500; color: #ffffff;font-family:Rubik; text-transform:uppercase; background-color:#ff5a2c; border-color:rgba(0, 0, 0, 1.00); border-width:2px;  border-radius: 3px;">Get Started Now
                     </div>
-                        <!-- LAYER NR. 5 -->
+                -->
+                    <!-- LAYER NR. 5 -->
                     <div class="tp-caption rev-btn rev-btn right-btn" 
-                        id="slide-2939-layer-15" 
-                        data-x="['left','left','left','left']" data-hoffset="['250','-60','-130','-100']" 
+                        id="slide-2939-layer-8" 
+                        data-x="['left','left','left','left']" data-hoffset="['0','500','420','280']" 
                         data-y="['middle','middle','middle','middle']" data-voffset="['75','220','190','100']" 
                         data-fontsize="['14','14','10','8']"
                         data-lineheight="['34','34','30','20']"
@@ -330,8 +335,7 @@
                         data-paddingright="[40,40,30,25]"
                         data-paddingbottom="[12,12,8,8]"
                         data-paddingleft="[40,40,30,25]"
-
-                        style="z-index: 14; white-space: nowrap;  font-weight:500; color:#ffffff; font-family:Rubik; text-transform:uppercase; background-color:#092ace; letter-spacing:1px; border-radius: 3px;">View Courses
+                        style="z-index: 14; white-space: nowrap;  font-weight:500; color:#ffffff; font-family:Rubik; text-transform:uppercase; background-color:#092ace; letter-spacing:1px; border-radius: 3px;"><a href="https://www.christuniversity.in/" style="color: white" target="_blank">Visit to Your College Website</a>
                     </div>
                 </li>
 
@@ -381,6 +385,7 @@
                                             <a href="forgot-password.html" title="" class="forget_pass">Forget Password ?</a>
                                             <button type="submit" class="btn btn-default login_btn">Login</button>
                                         </div> 
+                                        <!--
                                         <div class="col-12 col-lg-12 col-md-12 col-lg-12">
                                             <div class="social_login">
                                                 <div class="social_items">
@@ -391,6 +396,7 @@
                                                 </div>
                                             </div>
                                         </div>
+                                    -->    
                                     </div>
                                 </form>
                             </div>
@@ -961,7 +967,8 @@
     <div class="shapes_bg">
         <img src="images/shapes/testimonial_2_shpe_1.png" alt="" class="shape_3">        
         <img src="images/shapes/footer_2.png" alt="" class="shape_1">
-    </div>    
+    </div>   
+     
 </footer><!-- End Footer -->
 
 <section id="scroll-top" class="scroll-top">
